# j-pet-mlem-old

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .tm_properties  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  LICENSE  Makefile  PET.pro  PET.pro.shared  README.md  density_plot.h  detector.h  detector_view.h  ellipse.nb  features  geometry_plot.h  main.cpp  pet_matrix_mc.cpp  phantom.h  phantom_test.cpp  pixel_grid.h  pixel_grid_test.cpp  prob_app.nb  project.vp  reconstruction.h  simple.fp  tof_detector.h  tof_event.h  tof_event_test.cpp  tof_monte_carlo.h  tof_monte_carlo_test.cpp  topet_simulator.h
Frame/src/: Makefile  detector.h  small_linear_algebra.h  small_linear_algebra_test.cpp
PET.xcodeproj/: project.pbxproj
Strip_PET/: Makefile  Strip_PET.pro  data_structures.h  main.cpp  phantom.h  scintillator.h  spet_reconstruction.cpp  spet_reconstruction.h  strip_pet.cpp  strip_pet.h
cmake/: ExtPNG.cmake
config/: big.cfg  full_ring.cfg  small.cfg
data/: matrix_to_text.pl  readmatrix.pl
gate_input/: new_modules.mac
lib/: common.mk  log4cxx.patch
math/: 2d_barrel_matrix.m  Reconstruction.m  bbox_tests.nb  code.nb  correlations.nb  detector.nb  detector_ring_test.tab  detector_set_3d.nb  ellipse.nb  inscribed_shapes.nb  kernel.nb  kernel_test.nb  multilayer.nb  phantom_test.nb  planar_code.nb  plane_detector.nb  plane_detector2.nb  polygon_test.nb  polygon_test.tab  pratx.nb  praxt.nb  prob_app.nb  psf.m  read_matrix.nb  rec_2D_line.nb  reconstruction2.nb  resolution.nb  rotation_matrix.nb  round_detector_integral.nb  scintillator_emission.nb  secant.nb  secant_distrib.nb  secant_test.nb  secant_test.tab  srf2.nb  srf_ciri.nb  strip_kernel.nb  talk_04.06.nb  test.nb  tof.nb  (+4 more)
pet_matrix_mc/: Makefile  bstream.h  circle.h  circle_test.cpp  detector.h  detector_ring.h  detector_ring_test.cpp  detector_test.cpp  event.h  event_test.cpp  main.cpp  model.h  pet_matrix_mc.cpp  png_writer.cpp  point.h  polygon.h  polygon_test.cpp  reconstruction.h  ring_detector_test.cpp  sobolp.c  sobolp.h  svg_ostream.h  tof_event_test.cpp
pet_matrix_mc2/: circle.h  pet_matrix_mc.cpp  point.h
phantom/: s_shepp  s_shepp_small
samples/config/: small.cfg
scripts/: clang-legacy  cmake_clang-3.7.sh  cmake_clang-3.8.sh  doc_filter.pl  format  format-filter  matrix_compare.py  matrix_reader.py  petmatrix.py  sync_doc.sh  update_cmd_txt.sh
src/: 2d_strip_mc.pro  2d_strip_phantom.pro  2d_strip_reconstruction.pro  2d_xy_matrix.pro  2d_xy_matrix_cuda.pro  2d_xy_phantom.pro  2d_xy_reconstruction.pro  Makefile  PET.pro  PET.pro.shared  PET_common.pro  bstream.h  circle.h  circle_test.cpp  cmdline_types.h  common.pri  cuda_example.pro  cuda_test.pro  density_plot.h  detector.h  detector_ring.h  detector_ring_test.cpp  detector_test.cpp  detector_view.h  event.h  event_test.cpp  event_view.h  geometry_plot.h  libpng.mk  lor.h  matrix.h  matrix_lor_major.h  matrix_mc.h  matrix_monte_carlo.h  matrix_pixel_major.h  matrix_pixel_major_test.cpp  mkspecs  model.h  monte_carlo.h  pet_matrix.cpp  (+47 more)
src/2d_kernel_mc/: 2d_strip_mc_cmd.cpp  pixelgrid.cpp  pixelgrid.h
src/2d_strip/: 2d_strip_reconstruction.pro  Makefile  Strip_PET.pro  bstream.h  config.h  data_structures.h  event.h  flags.h  gpu_kernel_wrapper.h  kernel.h  kernel_test.cpp  options.cpp  options.h  pet_reconstruction.cpp  phantom.h  phantom_cmd.cpp  phantom_strip_cmd.cpp  reconstruction.h  reconstruction_cmd.cpp  reconstruction_stats.h  reconstruction_strip_cmd.cpp  scintillator.h  spet_reconstruction.cpp  spet_reconstruction.h  strip_bbox_test.cpp  strip_detector.h  strip_detector_test.cpp  strip_kernel_test.cpp  strip_pet.h  strip_pixel_methods_test.cpp
src/2d_xy/: 2d_xy_matrix.pro  2d_xy_phantom.pro  2d_xy_reconstruction.pro  TriangleDetector.h  circle_detector.h  circle_detector_test.cpp  detector.h  detector_ring.h  detector_ring.h.ud2494  detector_ring_test.cpp  event.h  event_test.cpp  hexagonal_detector.h  lor.h  matrix.h  matrix_cmd.cpp  matrix_pixel_major.h  matrix_pixel_major_test.cpp  model.h  monte_carlo.h  pet_matrix.cpp  phantom.h  phantom_cmd.cpp  phantom_test.cpp  polygonal_detector.h  reconstruction.h  reconstruction_cmd.cpp  sparse_matrix.h  square_detector.h  square_detector_test.cpp  triangle_detector.h  triangular_pixel_map.h
src/2d_xy_cuda/: config.h  data_structures.cu  data_structures.h  geometry_methods.cu  geometry_methods.cuh  gpu_detector_geometry_test.cuh  gpu_detector_hit_test.cuh  gpu_phantom_generation.cuh  kernel.cu  matrix_cuda.cpp
src/3d/: event.h
src/RMC/: Makefile  geometry_test.cpp  rmc_test.cpp  tor.h
src/common/: mathematica_graphics.h  mathematica_graphics_test.cpp  model.h  options.cpp  options.h  phantom_monte_carlo.h  phantom_monte_carlo_test.cpp
src/cuda_example/: kernel.cu  main.cpp  prng.cu
src/cuda_test/: kernel.cu  main.cpp
src/features/: cuda.prf
src/frame/: detector.h  detector_frame.h  detector_frame_test.cpp  detector_test.cpp  error_model.h  kernel.h  kernel_test.cpp  small_linear_algebra.h  small_linear_algebra_test.cpp
src/geometry/: circle.h  circle_test.cpp  ellipse.h  geometry.h  geometry_test.cpp  pixel.h  point.h  polygon.h  polygon_test.cpp
src/make/: common.pri
src/math/: matrix.h  matrix_test.cpp  vector.h  vector_test.cpp
src/mkspecs/: README
src/rmc/: rmc_test.cpp  tor.h
src/util/: array.h  array_test.cpp  backtrace.cpp  bstream.h  buffered_guarded_ostream.h  cmdline_hooks.cpp  cmdline_hooks.h  cmdline_types.h  compat.h  delegate.h  gate_parser.h  gate_parser_test.cpp  grapher.h  grapher_test.cpp  json.h  json_ostream.h  mathematica_ostream.h  nrrd_writer.h  null_stream.h  png_writer.cpp  png_writer.h  (+19 more)
test_input/: README.md
testbed/: m_big.cfg  m_big_ref.cfg  run.py  run_with_descriptor.py  wscript
tof/: Makefile  coldtohot.fp  density_plot.h  event_view.h  geometry_plot.h  gradient.fp  main.cpp  phantom.h  phantom_test.cpp  phantom_view.h  pixel_grid.h  pixel_grid_test.cpp  project.vp  simple.fp  taus.h  tausworthe.h  tof_detector.h  tof_event.h  tof_event_test.cpp  tof_monte_carlo.h  tof_monte_carlo_test.cpp  topet_simulator.h
(+331 files in other folders)
